--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>자기소개</title>
+    <title>Self Introduction</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="content-section" id="section1">
+            <!-- 프로필 -->
+            <div class="profile-container">
+                <div class="profile-img-div">
+                    <img src="">
+                </div>
+                <div class="profile-content-div">
+                    <!-- Add content here -->
+                </div>
+            </div>9
+
+
+        </div>
+    </div>
+    <script src="scripts.js"></script>
 </body>
 </html>
