프로필 완료

--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
             <!-- 프로필 -->
             <div class="profile-container">
                 <div class="profile-img-div">
-                    <img src="">
+                    <img src="./img/profile.png" class="profile-img">
                 </div>
                 <div class="profile-content-div">
-                    <!-- Add content here -->
+                    <h1 class="profile-name">최지설</h1>
+                    <h5 class="profile-ename">choi ji sul</h5>
+                    <h4 class="profile-phone">전화번호&nbsp;&nbsp;<d class="small-font">010-6593-0730</d></h4>
+                    <h4 class="profile-email">이메일&nbsp;&nbsp;<d class="small-font">w2217@e-mirim.hs.kr</d></h4>
+                    <h4 class="profile-address">주소&nbsp;&nbsp;<d class="small-font">관악구 관천로 11길 20-7</d></h4>
                 </div>
-            </div>9
+            </div>
 
 
         </div>
