index 프로필 디자인 바꿈. index완성. 스크롤 다음 section 스크롤 효과 완료

--- a/index.html
+++ b/index.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Self Introduction</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="container">
         <div class="content-section" id="section1">
-            <!-- 프로필 -->
+            <h1 class="section1-title">ABOUT ME</h1>
             <div class="profile-container">
-                <div class="profile-img-div">
-                    <img src="./img/profile.png" class="profile-img">
-                </div>
-                <div class="profile-content-div">
-                    <h1 class="profile-name">최지설</h1>
-                    <h5 class="profile-ename">choi ji sul</h5>
-                    <h4 class="profile-phone">전화번호&nbsp;&nbsp;<d class="small-font">010-6593-0730</d></h4>
-                    <h4 class="profile-email">이메일&nbsp;&nbsp;<d class="small-font">w2217@e-mirim.hs.kr</d></h4>
-                    <h4 class="profile-address">주소&nbsp;&nbsp;<d class="small-font">관악구 관천로 11길 20-7</d></h4>
-                </div>
+                <img src="./img/computer.png" class="computer">
             </div>
-
-
+            <div class="profile-detail" id="profileDetail">
+                <p id="profileDetail1"></p>
+                <p id="profileDetail2"></p>
+                <p id="profileDetail3"></p>
+            </div>
+        </div>
+        <div class="content-section" id="section2">
+            <h1 class="section1-title">SKILL</h1>
+            <p>Content for section 2</p>
+        </div>
+        <div class="content-section" id="section3">
+            <h1>Section 3</h1>
+            <p>Content for section 3</p>
+        </div>
+        <div class="content-section" id="section4">
+            <h1>Section 4</h1>
+            <p>Content for section 4</p>
+        </div>
+        <div class="content-section" id="section5">
+            <h1>Section 5</h1>
+            <p>Content for section 5</p>
         </div>
     </div>
     <script src="scripts.js"></script>
 </body>
+
 </html>
