스킬 페이지 완성

--- a/index.html
+++ b/index.html
@@ -23,7 +23,34 @@
         </div>
         <div class="content-section" id="section2">
             <h1 class="section1-title">SKILL</h1>
-            <p>Content for section 2</p>
+            <div class="skill-section">
+                <div class="skill-section1">
+                    <h5 class="skill-sub-title">Language</h5>
+                    <img src="./img/icon-css.png" class="skill-icon">
+                    <img src="./img/icon-html.png" class="skill-icon">
+                    <img src="./img/icon-js.png" class="skill-icon">
+                    <img src="./img/icon-php.png" class="skill-icon">
+                    <img src="./img/icon-java.png" class="skill-icon">
+                </div>
+                <div class="skill-section2">
+                    <h5 class="skill-sub-title">Language</h5>
+                    <img src="./img/icon-react.png" class="skill-icon">
+                    <img src="./img/icon-bootstrap.png" class="skill-icon">
+                </div>
+                <div class="skill-section3">
+                    <h5 class="skill-sub-title">Language</h5>
+                    <img src="./img/icon-notion.png" class="skill-icon">
+                    <img src="./img/icon-github.png" class="skill-icon">
+                    <img src="./img/icon-zoom.png" class="skill-icon">
+                </div>
+                <div class="skill-section3">
+                    <h5 class="skill-sub-title">Language</h5>
+                    <img src="./img/icon-photoshop.png" class="skill-icon">
+                    <img src="./img/icon-figma.png" class="skill-icon">
+                    <img src="./img/icon-exel.png" class="skill-icon">
+                    <img src="./img/icon-world.png" class="skill-icon">
+                </div>
+            </div>
         </div>
         <div class="content-section" id="section3">
             <h1>Section 3</h1>
